--- a/cards-Production.yml
+++ b/cards-Production.yml
@@ -4,7 +4,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to H_Bank cards related prod APIs "
+  message: "Welcome to H_Bank cards related production related APIs "
   contactDetails:
     name: "Sandra Harald - Product Owner"
     email: "sandra@eazybank.com"
