--- a/cards-Production.yml
+++ b/cards-Production.yml
@@ -4,7 +4,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to H_Bank production environment of the cards related APIs "
+  message: "Welcome to H Bank prod env for the cards related APIs "
   contactDetails:
     name: "Sandra Harald - Product Owner in H Bank"
     email: "sandra@eazybank.com"
