--- a/cards.yml
+++ b/cards.yml
@@ -3,7 +3,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to Default H_Bank cards related local APIs "
+  message: "Welcome to Default H_Bank cards related local APIs of default environment"
   contactDetails:
     name: "Dragos Lech - Developer"
     email: "dragos@eazybank.com"
