--- a/loans.yml
+++ b/loans.yml
@@ -4,7 +4,7 @@ build:
   version: "3.0"
 
 loans:
-  message: "Welcome to H_Bank loans related local APIs "
+  message: "Welcome to H_Bank loans related local APIs of default environment"
   contactDetails:
     name: "Ben Dunckett - Developer"
     email: "bendunckett@h_bank.com"
