--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -3,9 +3,10 @@ server:
 
 eureka:
   instance:
-    hostname: eurekaserver
+    hostname: localhost
   client:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl:
-      defaultZone: http://eurekaserver:8070/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    
